exports[`retinaImage should allow passing in a separate filename for the retina version 1`] = `
Object {
  "
    @media only screen and (-webkit-min-device-pixel-ratio: 1.3),
    only screen and (min--moz-device-pixel-ratio: 1.3),
    only screen and (-o-min-device-pixel-ratio: 1.3/1),
    only screen and (min-resolution: 125dpi),
    only screen and (min-resolution: 1.3dppx)
  ": Object {
    "backgroundImage": "url(retina_img.png)",
    "backgroundSize": undefined,
  },
  "backgroundImage": "url(img.png)",
}
`;

exports[`retinaImage should allow passing in a separate suffix for the retina version 1`] = `
Object {
  "
    @media only screen and (-webkit-min-device-pixel-ratio: 1.3),
    only screen and (min--moz-device-pixel-ratio: 1.3),
    only screen and (-o-min-device-pixel-ratio: 1.3/1),
    only screen and (min-resolution: 125dpi),
    only screen and (min-resolution: 1.3dppx)
  ": Object {
    "backgroundImage": "url(img_5x.png)",
    "backgroundSize": undefined,
  },
  "backgroundImage": "url(img.png)",
}
`;

exports[`retinaImage should allow passing in an extension with a dot 1`] = `
Object {
  "
    @media only screen and (-webkit-min-device-pixel-ratio: 1.3),
    only screen and (min--moz-device-pixel-ratio: 1.3),
    only screen and (-o-min-device-pixel-ratio: 1.3/1),
    only screen and (min-resolution: 125dpi),
    only screen and (min-resolution: 1.3dppx)
  ": Object {
    "backgroundImage": "url(img_2x.jpg)",
    "backgroundSize": undefined,
  },
  "backgroundImage": "url(img.jpg)",
}
`;

exports[`retinaImage should set the background-size if one is passed in 1`] = `
Object {
  "
    @media only screen and (-webkit-min-device-pixel-ratio: 1.3),
    only screen and (min--moz-device-pixel-ratio: 1.3),
    only screen and (-o-min-device-pixel-ratio: 1.3/1),
    only screen and (min-resolution: 125dpi),
    only screen and (min-resolution: 1.3dppx)
  ": Object {
    "backgroundImage": "url(img_2x.png)",
    "backgroundSize": "cover",
  },
  "backgroundImage": "url(img.png)",
}
`;

exports[`retinaImage should set the extension if one is passed in 1`] = `
Object {
  "
    @media only screen and (-webkit-min-device-pixel-ratio: 1.3),
    only screen and (min--moz-device-pixel-ratio: 1.3),
    only screen and (-o-min-device-pixel-ratio: 1.3/1),
    only screen and (min-resolution: 125dpi),
    only screen and (min-resolution: 1.3dppx)
  ": Object {
    "backgroundImage": "url(img_2x.jpg)",
    "backgroundSize": undefined,
  },
  "backgroundImage": "url(img.jpg)",
}
`;

exports[`retinaImage should use _2x and png as the default suffix and extension, respectively 1`] = `
Object {
  "
    @media only screen and (-webkit-min-device-pixel-ratio: 1.3),
    only screen and (min--moz-device-pixel-ratio: 1.3),
    only screen and (-o-min-device-pixel-ratio: 1.3/1),
    only screen and (min-resolution: 125dpi),
    only screen and (min-resolution: 1.3dppx)
  ": Object {
    "backgroundImage": "url(img_2x.png)",
    "backgroundSize": undefined,
  },
  "backgroundImage": "url(img.png)",
}
`;
